Set up attacking mechanisms

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -98,3 +98,11 @@ h1 {
 .occupied {
     background-color: lightblue;
 }
+
+.miss {
+    background-color: blue;
+}
+
+.hit {
+    background-color: red;
+}
