--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -47,8 +47,10 @@ button {
     height: 75px;
     display: flex;
     justify-content: center;
+    flex-direction: column;
     align-content: center;
     flex-wrap: wrap;
+    text-align: center;
 }
 
 h1 {
